# fastapi-example

./: .env  Dockerfile  alembic.ini  config.py  containers.py  context_var.py  database.py  docker-compose.yml  init.sql  main.py  middlewares.py  pyproject.toml
common/: auth.py  logger.py  messaging.py
example/: context_sample.py
migrations/: env.py
migrations/versions/: 2024_12_22_1310-3b0e01e91440_add_user_table.py  2024_12_25_0015-20731bb0d408_user_add_memo.py  2024_12_28_1456-14cb113a0ec0_add_note_tag.py
note/application/: note_service.py
note/domain/repository/: note_repo.py
note/infra/db_models/: note.py
note/infra/repository/: note_repo.py
note/interface/controllers/: note_controller.py
user/application/: email_service.py  send_welcome_email_task.py  user_service.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: crypto.py
